@@ -45,6 +45,11 @@ include_once "include/page_header.php";
 	define("YEAR_LEFT_SHIFT", 5);
 ?>
 <?php
+	if(! (DBfetch(DBselect('select serviceid from services where serviceid='.$_REQUEST["serviceid"]))) )
+	{
+		fatal_error(S_NO_IT_SERVICE_DEFINED);
+	}
+
 	$denyed_hosts = get_accessible_hosts_by_user($USER_DETAILS,PERM_READ_ONLY,PERM_MODE_LT);
 	
 	if( !($service = DBfetch(DBselect("select s.* from services s left join triggers t on s.triggerid=t.triggerid ".
