@@ -13,6 +13,8 @@ Changes for 1.5:
 
 Changes for 1.4.2:
 
+ - fixed items,graphs,hostgroups deletion (Eugene)
+ - fixed permisions for maps (Eugene)
  - fixed filtering of items by status (Eugene)
  - fixed collector for WinXX (Eugene)
  - fixed definition of serial columns to allow use of older MySQL (Alexei)
